--- a/index.html
+++ b/index.html
@@ -1,14 +1,62 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Kenny's Pokedex</title>
+  
+  <!-- Primary Meta Tags -->
+  <title>Kenny's Pokedex - Complete Pokemon Database</title>
+  <meta name="title" content="Kenny's Pokedex - Complete Pokemon Database">
+  <meta name="description" content="Explore the complete Pokemon database with Kenny's Pokedex. Find detailed information about Pokemon, their stats, abilities, and evolution chains.">
+  <meta name="keywords" content="pokedex, pokemon database, pokemon stats, pokemon evolution, pokemon guide">
+  <meta name="author" content="Kenny">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://pokemon-flax-nu.vercel.app/">
+  <meta property="og:title" content="Kenny's Pokedex - Complete Pokemon Database">
+  <meta property="og:description" content="Explore the complete Pokemon database with Kenny's Pokedex. Find detailed information about Pokemon, their stats, abilities, and evolution chains.">
+  <meta property="og:image" content="https://pokemon-flax-nu.vercel.app/og-image.jpg">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://pokemon-flax-nu.vercel.app/">
+  <meta property="twitter:title" content="Kenny's Pokedex - Complete Pokemon Database">
+  <meta property="twitter:description" content="Explore the complete Pokemon database with Kenny's Pokedex. Find detailed information about Pokemon, their stats, abilities, and evolution chains.">
+  <meta property="twitter:image" content="https://pokemon-flax-nu.vercel.app/og-image.jpg">
+
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  
+  <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
     integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <!-- Additional SEO tags -->
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="English">
+  <link rel="canonical" href="https://pokemon-flax-nu.vercel.app/">
+  
+  <!-- Schema.org markup for Google -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "Kenny's Pokedex",
+      "description": "Explore the complete Pokemon database with Kenny's Pokedex. Find detailed information about Pokemon, their stats, abilities, and evolution chains.",
+      "url": "https://pokemon-flax-nu.vercel.app",
+      "applicationCategory": "GameApplication",
+      "genre": "Pokemon Database",
+      "author": {
+        "@type": "Person",
+        "name": "Kenny"
+      }
+    }
+  </script>
 </head>
 
 <body>
@@ -16,5 +64,4 @@
   <div id="portal"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
-
 </html>
